overflow dialog fix

--- a/chrome_extension/ui/password-dialog/password-dialog.css
+++ b/chrome_extension/ui/password-dialog/password-dialog.css
@@ -38,8 +38,6 @@ body {
     color: black;
     text-align: left;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-    max-height: 100vh;
-    overflow: auto;
 }
 
 .mp-genpw-dialog .mp-triangle-out {
